# clnn

./: .gitignore  .travis.yml  Apply.lua  BatchNormalization.lua  CMakeLists.txt  CMulTable.lua  ClassNLLCriterion.lua  Connector.lua  ELU.cpp  ELU.lua  Endpoint.lua  FullyConnected.lua  Fusible.lua  LogSoftMax.lua  LookupTable.lua  MSECriterion.cl  MSECriterion.cpp  MSECriterion.lua  Narrow.lua  OneHot.lua  Pointwise.lua  README.md  ReLU.lua  Sigmoid.lua  SoftMax.cl  SoftMax.cpp  SoftMax.lua  SpatialAveragePooling.cl  SpatialAveragePooling.cpp  SpatialAveragePooling.lua  SpatialBatchNormalization.lua  SpatialConvolutionMM.cl  SpatialConvolutionMM.cpp  SpatialConvolutionMM.lua  SpatialFullConvolution.lua  SpatialMaxPooling.cl  SpatialMaxPooling.cpp  SpatialMaxPooling.lua  SpatialUpSamplingNearest.lua  StatefulTimer.lua  (+42 more)
cog-batteries/: stringify.py
conv/: AddBias.cpp  AddBias.h  BackGrad.cpp  BackGrad.h  BackGradIm2Col.cpp  BackGradIm2Col.h  ClConvolver.cpp  ClConvolver.h  Forward.cpp  Forward.h  Forward4.cl  Forward4.cpp  Forward4.h  ForwardAuto.cpp  ForwardAuto.h  ForwardIm2Col.cpp  ForwardIm2Col.h  GradWeights.cpp  GradWeights.h  GradWeightsIm2Col.cpp  GradWeightsIm2Col.h  per_element_add.cl
doc/: fusible2.txt  graph_usecases.txt  older-changes.md  porting-guidelines.md
lib/: CMakeLists.txt
lib/THCLNN/: Abs.cl  Abs.cpp  CMakeLists.txt  ELU.cl  ELU.cpp  SoftMax.cpp  SpatialAveragePooling.cl  SpatialAveragePooling.cpp  SpatialConvolutionMM.cpp  SpatialFullConvolution.cl  SpatialFullConvolution.cpp  SpatialMaxPooling.cpp  SpatialUpSamplingNearest.cl  SpatialUpSamplingNearest.cpp  THCLNN.h  Tanh.cpp  common.cpp  im2col.cl  im2col.cpp  im2col.h
rocks/: clnn-scm-1.rockspec
test/: test-batch.lua  test-clnn.lua  test-fullyconnected.lua  test-layer-perf.lua  test-layers.lua  test-mem.lua  test-mnist1.lua  test-mnist2.lua  test-perf.lua  test-prot.lua  test-spatialconvolution.lua  testBatchNormalization.lua  testClassNLLCriterion.lua  testELU.lua  testGroupedConv.lua  testIm2col.lua  testLogSoftMax.lua  testLookupTable.lua  testMSECriterion.lua  testMaxPooling.lua  testSoftMax.lua  testSpatialAveragePooling.lua  testSpatialConvolutionMM.lua  testSpatialMaxPooling.lua  testSpatialUpSamplingNearest.lua  testTemporalConvolution2.lua  testconv.lua  testhelpers.lua
test/lstm/: OneHot.lua
travis/: install-torch.sh
util/: port.py
